Tweaked some styling layouts around the PodcastDetailModal component, and fixed a background color issue for the tabs on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -74,7 +74,8 @@
 	width: 50px !important;
 }
 
-.mantine-Tabs-tab:active {
+.mantine-Tabs-tab:active,
+.mantine-Tabs-tab:hover {
 	background-color: unset;
 }
 
